--- a/index.html
+++ b/index.html
@@ -3,29 +3,29 @@
   <head>
     <meta charset="utf-8">
     <title>Home</title>
+	<link rel="stylesheet" type="text/css" href="style.css">
   </head>
-  <body bgcolor="#DAF7A6">
-    <a href="index.html">Home</a>
-	<a href="aboutme.html">About Me</a>
-    <a href="portfolio.html">Portfolio</a>
+  <body>
+   <ul>
+	 <li><a href="#" style="color:white;">Menu<a/>
+	    <ul>
+	         <li><a href="aboutme.html">About Me</a></li>
+             <li><a href="portfolio.html">Portfolio</a></li>
+		</ul>
+	 </li>
+   </ul>
+	<br>
+	<br>
 	<br>
 	<br>
 	<br>
 	<br>
    <center><h1 style="font-size:60px;color:white;"><b>Home Page<b></h1></center>
-   <br>
-   <style>
-body {
-  background-image: url('https://i.pinimg.com/originals/78/b5/89/78b5898ae3583c15215df76651c7fada.webp');
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-}
-</style>
-<body
-<br>
-<br>
-<br>
-<center><iframe width="640" height="385" src="https://www.youtube.com/embed/ZZx2_N6IwzQ"> </iframe></center>
+    <br>
+	<br>
+	<br>
+	<br>
+<center><iframe width="420" height="315" src="https://www.youtube.com/embed/ZZx2_N6IwzQ"> </iframe></center>
 <br>
   </body>
 </html>
