--- a/aboutme.html
+++ b/aboutme.html
@@ -2,6 +2,7 @@
 	<html lang="en">
 	  <head>
 	    <meta charset="utf-8">
+		<link rel="stylesheet" type="text/css" href="style.css">
 	<style>
 body {
   background-image: url('https://wallpaperaccess.com/full/13394.png');
@@ -11,10 +12,14 @@ body {
 </style>
 	    <title>About Me</title>
 	  </head>
-	  <body bgcolor="#FFB3E6">
-    <a href="index.html">Home</a>
-	<a href="aboutme.html">About Me</a>
-    <a href="portfolio.html">Portfolio</a>
+   <ul>
+	 <li><a href="#" style="color:white;">Menu<a/>
+	    <ul>
+	         <li><a href="index.html" style="color:grey;">Home</a></li>
+             <li><a href="portfolio.html" style="color:grey;">Portfolio</a></li>
+		</ul>
+	 </li>
+   </ul>
 	<br>
 	<br>
 	<br>
