--- a/portfolio.html
+++ b/portfolio.html
@@ -2,30 +2,46 @@
 	<html lang="en">
 	  <head>
 	    <meta charset="utf-8">
-	    <title>Portfolio</title>
+		<link rel="stylesheet" type="text/css" href="style.css">
+	    <center><title>Portfolio</title></center>
 	  </head>
-	  <body bgcolor="#FF8533">
-    <a href="index.html">Home</a>
-	<a href="aboutme.html">About Me</a>
-    <a href="portfolio.html">Portfolio</a>
-    <h1>Portfolio Page</h1>
-    <img src="images/portfolio.jpg" height="250">
+	  	<style>
+body {
+  background-image: url('https://wallpapercave.com/wp/wp4787752.jpg');
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+}
+</style>
+	   <ul>
+	 <li><a href="#" style="color:white;">Menu<a/>
+	    <ul>
+	         <li><a href="index.html" style="color:grey;">Home</a></li>
+             <li><a href="aboutme.html" style="color:grey;">About Me</a></li>
+		</ul>
+	 </li>
+   </ul>
+   <br>
+   <br>
+   <br>
+   <br>
+    <center><h1>Portfolio Page</h1></center>
     <br>
-    <h1>   Second day scratch project.</h1>
+    <center><h1>Second day scratch project</h1>
     <br>
-    <h1>   Using App Inventor to make app game Duck Hunter.</h1>
+    <h1>Using App Inventor to make app game Duck Hunter</h1>
     <br>
-    <h1>   Interactive Fiction Rags to Riches.</h1>
+    <h1>Interactive Fiction Rags to Riches</h1>
     <br>
-    <h1>   Black Jack game written in Python.</h1>
+    <h1>Black Jack game written in Python</h1>
     <br>
-    <h1>   Modified bits in pictures.</h1>
+    <h1>Modified bits in pictures</h1>
     <br>
-    <h1>   Use data files to create graphs.</h1>
+    <h1>Use data files to create graphs</h1>
     <br>
-    <h1>   Using netlogo do remix of illusions.</h1>
+    <h1>Using netlogo do remix of illusions</h1>
 	<br>
-    <h1>   Interactive Fiction Rags to Riches.</h1>
+    <h1>Interactive Fiction Rags to Riches</h1>
+	</center>
     <br>
 	  </body>
 	</html>
