--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
    <ul>
 	 <li><a href="#" style="color:white;">Menu<a/>
 	    <ul>
-	         <li><a href="aboutme.html">About Me</a></li>
-             <li><a href="portfolio.html">Portfolio</a></li>
+	         <li><a href="aboutme.html" style="color:grey;">About Me</a></li>
+             <li><a href="portfolio.html" style="color:grey;">Portfolio</a></li>
 		</ul>
 	 </li>
    </ul>
