--- a/index.html
+++ b/index.html
@@ -25,7 +25,26 @@
 	<br>
 	<br>
 	<br>
-<center><iframe width="853" height="505" src="https://www.youtube.com/embed/ZZx2_N6IwzQ"> </iframe></center>
+<center><h1 style="font-size:10px;color:white;"><b>chinese music<b></h1></center>
+<center><iframe width="700" height="420" src="https://www.youtube.com/embed/ZZx2_N6IwzQ"> </iframe></center>
 <br>
+	<center>
+	<body>
+	<center><h1 style="font-size:30px;color:white;"><b>California, Oregon, and New York<b></h1></center>
+	  <div class="slider-frame">
+	      <div class="slide-images">
+	        <div class="img-container">
+	            <img src="image/CAhome.jpg">
+	        </div>
+	        <div class="img-container">
+		        <img src="image/ORhome.jpg">
+	        </div>
+	        <div class="img-container">
+	            <img src="image/NYhome.jpg">
+	        </div>
+		</div>
+	</div>
+	</body> 
+    </center>	
   </body>
 </html>
