--- a/index.html
+++ b/index.html
@@ -34,13 +34,13 @@
 	  <div class="slider-frame">
 	      <div class="slide-images">
 	        <div class="img-container">
-	            <img src="image/CAhome.jpg">
+	            <img src="/image/CAhome.jpg">
 	        </div>
 	        <div class="img-container">
-		        <img src="image/ORhome.jpg">
+		        <img src="/image/ORhome.jpg">
 	        </div>
 	        <div class="img-container">
-	            <img src="image/NYhome.jpg">
+	            <img src="/image/NYhome.jpg">
 	        </div>
 		</div>
 	</div>
