--- a/aboutme.html
+++ b/aboutme.html
@@ -23,11 +23,32 @@ body {
 	<br>
 	<br>
 	<br>
-    <center><h1 style="color:white;">All (Not Really) About Me </h1></center>
+    <center><h1 style="color:white;">All (Not Really)</h1></center>
+	<center><h1 style="color:white;">About Me</h1></center>
     <br>
-
+	<center>
+	<audio controls autoplay>
+      <source src="Interstellar.mp3" type="audio/mpeg">
+    </audio>
+	<h1 style="font-size:20px;color:grey;"><b>Isn't it fascinating how we are only a tiny grain of sand compared to the universe?<b></h1>
+	<h1 style="font-size:20px;color:grey;"><b>As shown on the homepage, my name is Chen and I'm from Taiwan.<b></h1>
+	<h1 style="font-size:20px;color:grey;"><b>Currently as of 2021, a RBHS Junior and looking forward to computer science principles.<b></h1>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<h1 style="font-size:20px;color:grey;" background-color="black"><b>I enjoy Ice Cream<b></h1>
+<img src="image/icecream.jpg" width="256" height="256">
+	</center>
    </h1>
     <br>
     </a>
 	  </body>
 	</html>
+
