--- a/index.html
+++ b/index.html
@@ -31,19 +31,9 @@
 	<center>
 	<body>
 	<center><h1 style="font-size:30px;color:white;"><b>California, Oregon, and New York<b></h1></center>
-	  <div class="slider-frame">
-	      <div class="slide-images">
-	        <div class="img-container">
-	            <img src="/image/CAhome.jpg">
-	        </div>
-	        <div class="img-container">
-		        <img src="/image/ORhome.jpg">
-	        </div>
-	        <div class="img-container">
-	            <img src="/image/NYhome.jpg">
-	        </div>
-		</div>
-	</div>
+	  <img src="image/CAhome.jpg">
+	  <img src="image/ORhome.jpg">
+	  <img src="image/NYhome.jpg">     
 	</body> 
     </center>	
   </body>
