--- a/portfolio.html
+++ b/portfolio.html
@@ -41,6 +41,10 @@ body {
     <h1>Using netlogo do remix of illusions</h1>
 	<br>
     <h1>Interactive Fiction Rags to Riches</h1>
+	<br>
+	<img src="image/1stProject.jpg" width="500" height="500">
+	<h1><style="font-size:20px;color:white;"><b>1.1.9 PLTW Project <b></h1>
+	<h1><style="font-size:20px;color:white;"><b>Group members: Nolan Flores, Jonathan Jeong, Carolynn Rui, Chenhsin Huang<b></h1>
 	</center>
     <br>
 	  </body>
