--- a/portfolio.html
+++ b/portfolio.html
@@ -42,9 +42,17 @@ body {
 	<br>
     <h1>Interactive Fiction Rags to Riches</h1>
 	<br>
+	<img src="image/CSPCrossRiver.jpg" width="700" height="550">
+	<h1 style="font-size:20px;color:white;"><b>1.2.5 PLTW Project <b></h1>
+	<center><h1 style="font-size:20px;color:white;"><b> Group members: Jeffrey Kressin, Mackenzie Bivin, Madden Lai, Chenhsin Huang<b></h1></center>
+	<br>
+	<center><h1 style="font-size:20px;color:white;"><b> Turtles move across the river and the user has to avoid them and get across<b></h1></center>
+	<br>
 	<img src="image/1stProject.jpg" width="500" height="500">
-	<h1><style="font-size:20px;color:white;"><b>1.1.9 PLTW Project <b></h1>
-	<h1><style="font-size:20px;color:white;"><b>Group members: Nolan Flores, Jonathan Jeong, Carolynn Rui, Chenhsin Huang<b></h1>
+	<h1 style="font-size:20px;color:white;"><b>1.1.9 PLTW Project <b></h1>
+	<h1 style="font-size:20px;color:white;"><b>Group members: Nolan Flores, Jonathan Jeong, Carolynn Rui, Chenhsin Huang<b></h1>
+	<br>
+	<center><h1 style="font-size:20px;color:white;"><b> Creates ice cream based on the user's preferences from the menu<b></h1></center>
 	</center>
     <br>
 	  </body>
