--- a/portfolio.html
+++ b/portfolio.html
@@ -53,6 +53,10 @@ body {
 	<h1 style="font-size:20px;color:white;"><b>Group members: Nolan Flores, Jonathan Jeong, Carolynn Rui, Chenhsin Huang<b></h1>
 	<br>
 	<center><h1 style="font-size:20px;color:white;"><b> Creates ice cream based on the user's preferences from the menu<b></h1></center>
+	<br>
+	<img src="image/CSPMancala.jpg" width="700" height="550">
+	<h1 style="font-size:20px;color:white;"><b>1.3 PLTW Project <b></h1>
+	<h1 style="font-size:20px;color:white;"><b>Group members: Yuki Kako, Adam Smith, Megha Kataki, Chenhsin Huang<b></h1>
 	</center>
     <br>
 	  </body>
