--- a/portfolio.html
+++ b/portfolio.html
@@ -54,9 +54,16 @@ body {
 	<br>
 	<center><h1 style="font-size:20px;color:white;"><b> Creates ice cream based on the user's preferences from the menu<b></h1></center>
 	<br>
-	<img src="image/CSPMancala.jpg" width="700" height="550">
-	<h1 style="font-size:20px;color:white;"><b>1.3 PLTW Project <b></h1>
+	<img src="image/CSPMancala.jpg" width="650" height="550">
+	<h1 style="font-size:20px;color:white;"><b>1.3.1 PLTW Project <b></h1>
 	<h1 style="font-size:20px;color:white;"><b>Group members: Yuki Kako, Adam Smith, Megha Kataki, Chenhsin Huang<b></h1>
+	<br>
+	<center><h1 style="font-size:20px;color:white;"><b> Creates a player turn strategy based game called Mancala<b></h1></center>
+	<img src="image/CSPScratch.jpg" width="700" height="550">
+	<h1 style="font-size:20px;color:white;"><b>CSP Scratch <b></h1>
+	<h1 style="font-size:20px;color:white;"><b>Group members: Andrea Kelly, Quentin Phillips, Krish Thakkar, Chenhsin Huang<b></h1>
+	<br>
+	<center><h1 style="font-size:20px;color:white;"><b> Creates a bee collecting coin where you have to get back to the hive<b></h1></center>
 	</center>
     <br>
 	  </body>
