--- a/portfolio.html
+++ b/portfolio.html
@@ -63,7 +63,7 @@ body {
 	<h1 style="font-size:20px;color:white;"><b>CSP Scratch <b></h1>
 	<h1 style="font-size:20px;color:white;"><b>Group members: Andrea Kelly, Quentin Phillips, Krish Thakkar, Chenhsin Huang<b></h1>
 	<br>
-	<center><h1 style="font-size:20px;color:white;"><b> Creates a bee collecting coin where you have to get back to the hive<b></h1></center>
+	<center><h1 style="font-size:20px;color:white;"><b> Creates a bee collecting coin game where you have to get back to the hive<b></h1></center>
 	</center>
     <br>
 	  </body>
